--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Trying this thing out
 author: charlie
+theme: minima
 email: rastaboot@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
